--- a/article/article.tex
+++ b/article/article.tex
@@ -12,6 +12,8 @@
 
 \usepackage{graphicx}
 
+\usepackage{array}
+
 \usepackage{lineno}
 \linenumbers
 
@@ -78,6 +80,32 @@ Finally, we investigate how incorporating detectability as offsets affects the t
 We first describe the current status and trend model used by the Canadian Wildlife Service, as well as relevant Bayesian priors and assumptions with that model.
 We then describe how to use the point-level data in this status and trend model, as well as describe additional choices a researcher could make regarding route-level hyperparameters.
 Then, we expand this point-level model to explicitly include detectability estimates, as well as uncertainty around those estimates using variance propagation techniques described by \citep{bravington_variance_2021}.
+Table \ref{table:params} provides a reference guide to all the parameters used in these models.
+
+\begin{table}[ht]\label{table:params}
+	\centering
+	\caption{Parameters in the BBS models.}
+		\begin{tabular}[t]{l>{\raggedright}p{0.5\linewidth}>{\raggedright\arraybackslash}p{0.3\linewidth}}
+		\hline
+		Parameter or Datum&Description&Model\\
+		\hline
+		$i$&Stratum index&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$j$&Point/stop index&Equation \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$J$&Route index&Equation \ref{bbs}\\
+		$t$&Year index&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$o$&Observer index&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$Y_{J,i,t,o}$&Total observed birds at route $J$, stratum $i$, year $t$, by observer $o$&Equation \ref{bbs}\\
+		$Y_{j,i,t,o}$&Total observed birds at point $j$, stratum $i$, year $t$, by observer $o$&Equation \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\alpha_i$&Stratum-level intercept, modelled with an intrinsic conditional autoregressive model \citep{besag_bayesian_1991, smith_spatially_2023}&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\delta_{i,t}$&Smoothed temporal component estimating population trajectory through time. Modelled with generalized additive model \citep{smith_north_2021}&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\gamma_{i,t}$&Annual year-effect fluctuation term; departure from smoothed GAM \citep{smith_north_2021}&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\psi_J$&Route-level intercept&Equation \ref{bbs}\\
+		$\psi_j$&Point-level intercept&Equation \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\omega_o$&Observer-level intercept&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		$\eta$&Smoothed temporal component estimating population trajectory through time. Modelled with generalized additive model \citep{smith_north_2021}&Equation \ref{bbs}, \ref{bbs-point}, \ref{bbs-detect}, \ref{bbs_varprop}\\
+		\hline
+	\end{tabular}
+\end{table}%
 
 \subsection{Current BBS Protocol and Analysis}
 
@@ -475,11 +503,11 @@ Therefore, by applying detectability information to this seemingly flat trend, t
 
 \subsection{Assessment of Variance Propagation Diagnostics}
 
-\par \citet{bravington_variance_2021} provides a few ways to assess whether the variance propagation component is, in fact, only propagating the variance forward from the detection equations into the GAM, or whether there are potential confounds with detectability that manifests in the GAM.
-In this study, we assessed two of these criteria.
+\par \citet{bravington_variance_2021} provides ways to assess whether the variance propagation component is, in fact, only propagating the variance forward from the detection equations into the GAM, or whether there are potential confounds with detectability that manifests in the GAM.
+We assessed two of these criteria.
 
 We first compared the indices generated from the VARPROP model to the ``naive" indices generated from the DETECT model, with the prediction that the indices should be close to a one-to-one correspondence.
-Overall, we did find a close correspondence between the two sets of indices, which tended to have an increase in variance with larger indices.
+Overall, we found a close correspondence between the two sets of indices, which tended to have an increase in variance with larger indices.
 This is generally what we would expect with a negative binomial response with a log offset.
 
 We then assessed the posterior estimates of the variance propagation terms $\zeta$ and $\xi$; with no confounds, estimates of these terms should be close to zero, therefore only propagating forward the variance from detectability terms \citep{bravington_variance_2021}.
@@ -488,27 +516,26 @@ This implies that there may be a systematic bias or confound between detectabili
 This could possibly be explained by the lack of detail used in vegetation coverage type when considering detectability.
 That is to say, while the detectability estimates from NA-POPS only considers forest coverage as a percentage, it does not account for differences in forest type (e.g., coniferous vs deciduous vs mixed).
 Additionally, in more open habitats, there is no differentiation between, for example, forest that gets converted to grassland versus forest that gets converted to urban land.
-Previous studies have shown differences in detectability via sound attentuation based on different habitat types \citep{schieck_biased_1997}, implying that a simple ``open" versus ``closed" may not quite be sufficient in explaining detectability.
+Previous studies have shown differences in detectability via sound attenuation based on different habitat types \citep{schieck_biased_1997}, implying that a simple ``open" versus ``closed" may not quite be sufficient in explaining detectability.
 Thus, we suggest future iterations of detectability estimates from NA-POPS, and future applications of those detectability estimates to datasets such as the BBS, consider habitat types in addition to the amount of open or closed forest.
 It would then be worth investigating whether that eliminates the bias seen in Figure \ref{fig:varprop-diagnostics}.
 
 \subsection{Applications and Implications for Conservation Managers}
 \subsubsection{Improve Trend Estimates for Species Listing}
 
-\par North American Breeding Bird Survey data have been used in countless conservation problems \citep{hudson_role_2017}.
-It is clear to see why: the dataset is long term, with close to 60 years of longitudinal data; the dataset is highly structured, meaning there are specific protocols that must be followed in order to maintain a sense of homogeneity between counts; and the dataset is comprehensive, given there are routes that span a vast area of Canada and the US.
+\par North American Breeding Bird Survey data have been highly useful in conservation \citep{hudson_role_2017}.
+The dataset is long term, with close to 60 years of longitudinal data; it is highly structured, meaning there are specific protocols that must be followed in order to maintain a sense of homogeneity between counts; and the routes span a vast area of Canada and the US.
 
-\par Still, in any survey, the observation process is riddled with biases.
-Despite being a highly-structured dataset that has many biases accounted for, observed counts on a BBS route will still suffer from the same observational biases based on surveying at different times of the day, different times of the year, and in different and changing landscapes.
+\par Despite being a highly-structured dataset that has many biases accounted for, observed counts on a BBS route will still suffer from observational biases based on changing landcover through time at survey locations.
 By explicitly incorporating detectability into the BBS analyses, we can correct for some of these additional sources of bias in the dataset in our attempts at trying to model the true underlying abundance of birds.
-Similarly, given detectability is currently a dynamic field of research, particularly in the bird world but among other taxa as well, future BBS output that include the most up-to-date research on detectability can begin to generate trends that more closely reflect the true increases or decreases of bird species.
+Similarly, given detectability is currently a dynamic field of research, future BBS outputs that include the most up-to-date research on detectability can begin to generate trends that more closely reflect the true increases or decreases of bird species.
 This is particularly important in jurisdictions such as Canada that rely on estimates from the BBS to inform the listing and delisting process of species at risk.
-Species where the true trend is masked by changes in detectability may not be able to get properly listed, and thus could face continuing threats and issues that come with ``monitoring to extinction" \citep{martin_acting_2012, lindenmayer_counting_2013}.
-By being able to include this key piece of information, and by being able to account for a large source of bias, the BBS can continue to provide excellent information on status, trends, and relative abundance of birds in North America well into the future.
+Species where the true trend is masked by changes in detectability may not get properly listed, and thus could face continuing threats and issues that come with ``monitoring to extinction" \citep{martin_acting_2012, lindenmayer_counting_2013}.
+By including this key piece of information, and by being able to account for a large source of bias, the BBS can continue to provide excellent information on status, trends, and relative abundance of birds in North America well into the future.
 
 \subsubsection{Data Integration}
 
-\par Data integration is an increasingly growing topic throughout ecology \citep{isaac_data_2020, miller_recent_2019, pacifici_integrating_2017, boersch-supan_integrating_2021}, especially as the number of data sets continue to grow \citep{binley_minimizing_2023}.
+\par Data integration is a growing topic throughout ecology \citep{isaac_data_2020, miller_recent_2019, pacifici_integrating_2017, boersch-supan_integrating_2021}, especially as the number of data sets continue to grow \citep{binley_minimizing_2023}.
 As such, recognizing what biases exist---in both professionally-collected data and community science data \citep{binley_data_2023}---across complementary data sets and working out methodologies to jointly model these data sets can improve inference of the state of a biological system.
 
 \par While the BBS samples a vast area of Canada and the US, there are still significant gaps in coverage, such as offroad areas, and the boreal forest. 
@@ -523,13 +550,12 @@ Because counts within a stratum are averaged for trend, even if additional data 
 
 \subsection{Call to Action: The Need for BBS Point Locations}
 
-\par This study provides two key steps forward in modelling North American BBS data: 1) we show how to model BBS data at an even finer spatial scale (i.e., at the point/stop level) than previous models, and 2) we provide a way forward to explicitly incorporate detectability into analyses of BBS data.
+\par This study provides two key steps forward in modelling North American BBS data: 1) we show how to model BBS data at a finer spatial scale (i.e., at the point/stop level) than previous models, and 2) we provide a way forward to explicitly incorporate detectability into analyses of BBS data.
 Incorporating detectability into BBS analyses has been a widely-discussed topic in the literature for decades \citep{sauer_observer_1994, ankorikarlinsky_north_2022, zhang_habitat_2021, somershoe_combining_2006, griffith_traffic_2010, binley_better_2023, knight_combination_2021}.
-Several reasons exist as to why this has not been previously accounted for: 1) the BBS sampling does not allow for removal or distance sampling, 2) explicit detectability estimates did not previously exist for the suite of species modelled by BAM and NA-POPS, and 3) the BBS has been analyzed at the route level, whereas the observation processes (including detectability) happen at the point level.
+Several reasons exist as to why this has not been accomplished: 1) the BBS sampling does not allow for removal or distance sampling, 2) explicit detectability estimates did not previously exist for the suite of species modelled by BAM and NA-POPS, and 3) the BBS has been analyzed at the route level, whereas the observation processes (including detectability) happen at the point level.
 However, we are finally close to a point where we have all the information needed, as shown here.
 The QPAD method \citep{solymos_calibrating_2013} has allowed for broad-scale estimates of detectability in landbirds, which has resulted in detectability estimates for over 300 species in the NA-POPS database \citep{edwards_point_2023}.
 These detectability offsets can be applied to any point count, including ones like the BBS that do not include removal or distance sampling.
-This means that as long as we have access to point-level counts for the BBS (such as through bbsBayes \citep{edwards_bbsbayes_2021}, bbsAssistant \citep{burnett_bbsassistant_2019}, or straight through the USGS website), we can apply detectability estimates as offsets in the model, and correct for detectability.
 
 \par A major caveat to the above is that in order to apply detectability offsets that include information about habitat, it is necessary to know where the BBS points are.
 By knowing the coordinates of the point-count centre, one can extract information about the habitat around a 400 m buffer (i.e., the point count area), using GIS tools and landcover layers. 
@@ -537,8 +563,8 @@ However, BBS point locations generally seem to be a difficult dataset to come by
 Of course, there are properties of the BBS that can easily be inferred based on the data that are available, including start time of point counts, day of the year the route (and therefore points) were run, the fact that all the points are a roadside survey, and the fact that all the points are three minutes in duration and have a maximum survey radius of 400 m.
 If, for example, a species had a Roadside-only model chosen as the best explanatory model for perceptibility in NA-POPS, then a researcher may not need information about exact locations of BBS points.
 However, we have clearly shown here how species trends can be drastically affected by changes in detectability, due to changes in forest coverage in the landscape.
-Thus, we implore agencies who manage the BBS to consider data management and data releases that include all information at the point level, including point locations and changes to point locations over the year.
-Only then can we truly have a mechanistic and holistic understanding of the interactions between the landscape, detectability, and the number of species that BBS observers are observing.
+Thus, we suggest agencies who manage the BBS to consider data management and data releases that include all information at the point level, including point locations and changes to point locations over the year.
+Only then can we have a mechanistic and holistic understanding of the interactions between the landscape, detectability, and the number of species that BBS observers are observing.
 
 
 
